--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
 		"extras":"git@bitbucket.org:Zetosoft/extras.git",
 		"logger":"git@bitbucket.org:Zetosoft/logger.git",
 		"screen":"git@bitbucket.org:Zetosoft/screen.git",
-		"spine":"git@bitbucket.org:Zetosoft/spine.git"
+		"spine":"git@bitbucket.org:Zetosoft/spine.git",
+		"sound":"git@bitbucket.org:Zetosoft/sound.git"
 	},
 	"ignore": [
 		"main.lua",
