--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
 		"index":"git@github.com:CetoBasilius/index.git",
 		"logger":"git@bitbucket.org:Zetosoft/logger.git",
 		"localization":"git@bitbucket.org:Zetosoft/localization.git",
+		"mixpanel":"git@bitbucket.org:Zetosoft/mixpanel.git",
 		"screen":"git@bitbucket.org:Zetosoft/screen.git",
 		"spine":"git@bitbucket.org:Zetosoft/spine.git",
 		"sound":"git@bitbucket.org:Zetosoft/sound.git",
